--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             </div>
             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
-                <h3>I work in front and back end development, my aim is to be an amazing full stack web developer. I am working on projects I find out and I am also trying to create a team of graduates, so we can get more experience together. I studied web basics in the university too, but then I worked in deferrent fields. I thought programming is not for me and people need to born to do it. Then I have read a lot about programming and I found out this is what I want to do.</h3>
+                <h3>I work in front and back end development, my aim is to be an amazing full stack web developer. I am working on projects I find out and I am also trying to create a team of graduates, so we can get more experience together. I am also interested in Web VR, I started to work with A-Frame recently. </h3>
                 </div>
             </div>
           </div>
