--- a/index.html
+++ b/index.html
@@ -184,13 +184,14 @@
       <div class="container row">
         <div class="modal-button">
           <button class="btn btn-primary resume-button" data-toggle="modal" data-target=".bs-example-modal-lg">View my Resume</button>
+          <button class="btn btn-primary resume-button" data-toggle="modal" data-target=".bs-cert-modal-lg">View my Certificate</button>
                 <!-- Small modal -->
           <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Resume</h4>
+                  <h4 class="modal-title" id="myModalLabel">Resume</h4>
                 </div>
                 <div class="modal-body">
                   <embed id="modalembed" src="img/resume.pdf">
@@ -198,6 +199,22 @@
               </div>
             </div>
           </div>
+
+          <div class="modal fade bs-cert-modal-lg" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">Web Developer Certificate</h4>
+                </div>
+                <div class="modal-body">
+                  <embed id="modalembed" src="img/cert.pdf">
+                </div>
+              </div>
+            </div>
+          </div>
+
+
         </div>
       </div>
     </div><br><!--  end about -->
