--- a/index.html
+++ b/index.html
@@ -129,10 +129,14 @@
         <div class="col-sm-4 col-xs-12 profile-text">
           <h2>Projects</h2>
           <h3><p>Training myself every day and pushing my own limits to discover new ways of creating a great experience for the users.<br>
-          Have a look at my actual projects I am working on!
+          Have a look at my actual projects I am working on!<br>
           </p>
           </h3>
           <p><a href="#mywork"><button type="button" class="btn btn-default">My Projects &raquo;</button></a></p>
+          <h2>News</h2>
+          <h3>WeAreDevelopers Conference 2017 was a great experience!<br>
+          See you at WeAreDevelopers World Congress 2018!</h3>
+          <p><a href="https://www.wearedevelopers.com/"><button type="button" class="btn btn-default">More info &raquo;</button></a></p>
         </div><!-- /col -->
         <div class="col-sm-4 col-xs-12">
           <h2>Contact Me</h2>
