Add down arrow to carousel with smooth scroll

--- a/index.html
+++ b/index.html
@@ -113,13 +113,19 @@
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+ 
 </div><!-- end carousel -->
 
+  <div class="container title-center">
+    <a class="arrow-down" href="#firstblock"><span class="glyphicon glyphicon-chevron-down"></span>
+    </a>
+  </div>
 
 
-    <div class="container anchor">
+
+    <div class="container anchor" id="firstblock">
       <!-- Example row of columns -->
-      <div class="row container">
+      <div class="row container" id="introblock">
         <div class="col-sm-4 col-xs-12 profile-text">
           <h2>About Me</h2>
             <h3><p>After my information science and history studies I explored my abilities and I gained new skills in the areas of management, customer relationship and supply chain. Now I am on the way to become a professional full stack web developer, working with HTML, JavaScript and Ruby on Rails. My purpose is to make the life of people, companies, organizations easier with useful and clear coding.</p>
@@ -223,7 +229,10 @@
       </div>
     </div><br><!--  end about -->
     
-    <div class="container anchor title-center" id="mywork"><h1>My Work</h1></div>
+    <div class="container anchor title-center" id="mywork">
+      <h1>My Work</h1>
+      <h3>Click on the project to open it or click on Details to see how I created it</h3>
+    </div>
 
 
 
