Add smooth scroll to buttons

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <h2>About Me</h2>
             <h3><p>After my information science and history studies I explored my abilities and I gained new skills in the areas of management, customer relationship and supply chain. Now I am on the way to become a professional full stack web developer, working with HTML, JavaScript and Ruby on Rails. My purpose is to make the life of people, companies, organizations easier with useful and clear coding.</p>
             </h3>
-          <p><a href="#about"><button type="button" class="btn btn-default">More about me &raquo;</button></a></p>
+          <p><a href="#about" class="arrow-down"><button type="button" class="btn btn-default">More about me &raquo;</button></a></p>
         </div><!-- /col -->
         <div class="col-sm-4 col-xs-12 profile-text">
           <h2>Projects</h2>
@@ -138,7 +138,7 @@
           Have a look at my actual projects I am working on!<br>
           </p>
           </h3>
-          <p><a href="#mywork"><button type="button" class="btn btn-default">My Projects &raquo;</button></a></p>
+          <p><a href="#mywork" class="arrow-down"><button type="button" class="btn btn-default">My Projects &raquo;</button></a></p>
           <h2>News</h2>
           <h3>WeAreDevelopers Conference 2017 was a great experience!<br>
           See you at WeAreDevelopers World Congress 2018!</h3>
@@ -167,7 +167,7 @@
           </p><br>
 
           <p>
-            <button type="button" class="btn btn-default"><a href="#contact-form">Contact form &raquo;</a>
+            <button type="button" class="btn btn-default"><a href="#contact-form" class="arrow-down">Contact form &raquo;</a>
             </button>
           </p>
         </div><!-- /col -->
