Laravel project update

--- a/index.html
+++ b/index.html
@@ -275,7 +275,9 @@
                 11.04. - In development I created a photo upload section, but on development I would need to start using Amazon Web Services (AWS) to store files as it is not possible on Heroku. I decided not to do this, for now I am using weblinks to show pictures and later on I will setup AWS.<br>
                 12-14.04. - I am getting an error message from the browser in development: "The page has expired". Solution: change session driver to database instead of file in .env file.<br>Delete User function and middleware authorization (Admin) added.<br>
                 18.04. - Flash messages added to CRUD and custom 404 page to view. Posts controller has been created, routes/views/model have been set.<br>Problem in dev: 'failed to open stream: Permission denied'<br>Solution: There is a permission problem in storage, the command 'chmod -R 777 app/storage' helps.<br>
-                19.04 - PostRequest added for posts form validation. Categories CRUD is ready.</p>
+                19.04 - PostRequest added for posts form validation. Categories CRUD is ready.<br>
+                23.04 - Comment model and controller have been created with view and routes. View's being made dynamic.
+                </p>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
