--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
       <!-- Resume -->
       <div class="container row">
         <div class="modal-button">
-          <button class="btn btn-primary resume-button" data-toggle="modal" data-target=".bs-example-modal-lg">View my Resume</button>
-          <button class="btn btn-primary resume-button" data-toggle="modal" data-target=".bs-cert-modal-lg">View my Certificate</button>
+          <div class="col-xs-6 col-md-3"><button class="btn btn-primary resume-button" data-toggle="modal" data-target=".bs-example-modal-lg">View my Resume</button></div>
+          <div class="col-xs-6 col-md-3"><button class="btn btn-primary resume-button" data-toggle="modal" data-target=".bs-cert-modal-lg">View my Certificate</button></div>
                 <!-- Small modal -->
           <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
@@ -240,15 +240,15 @@
     <div class="row">
 
       <!-- Sportbuddy project -->
-      <div class="container col-sm-6">
+      <div class="container col-sm-6 title-center">
         <a href="https://sportbuddies.000webhostapp.com/sportbuddy" target="_blank" class="work-img">
           <img class="img-responsive project-images" src="img/sport-dark.png">
           <span class="info"><p class="proj-title">Project:</p>"PHP/Mysql project with self-developed framework"</span>
         
         </a>
         <div class="work-img">
-          <button type="button" class="btn btn-default btn-lg col-sm-12" id="modalButton" data-toggle="modal" data-target="#sportbuddy">
-          For the details click here!
+          <button type="button" class="btn btn-default btn-lg col-xs-12 col-sm-12" id="modalButton" data-toggle="modal" data-target="#sportbuddy">
+          PHP/MySQL project, click here!
         </button>
         </div>
 
