--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
       <!-- Sportbuddy project -->
       <div class="container col-sm-6 title-center">
-        <a href="https://sportbuddies.000webhostapp.com/sportbuddy" target="_blank" class="work-img">
+        <a href="#currentProject" class="work-img" data-toggle="modal" data-target="#sportbuddy">
           <img class="img-responsive project-images" src="img/sport-dark.png">
           <span class="info"><p class="proj-title">Project:</p>"PHP/Mysql project with self-developed framework"</span>
         
