--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                   <h4 class="modal-title" id="myModalLabel">Resume</h4>
                 </div>
                 <div class="modal-body">
-                  <embed id="modalembed" src="img/resume.pdf">
+                  <embed id="modalembed" src="img/cv.pdf">
                 </div>
               </div>
             </div>
