--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             </div>
             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
-                <h3>I work in front and back end development, my aim is to be an amazing full stack web developer. I am working on projects I find out and I am also trying to create a team of graduates, so we can get more experience together. I am also interested in Web VR, I started to work with A-Frame recently. </h3>
+                <h3>I work mainly in back end with PHP and frameworks like Laravel, but I do also front end, designing with Bootstrap and I practice Wordpress too. I work on projects I find out or I think has a positiv impact for someone. I developed an own PHP framework with a help of Composer and SimpleRouter. You can find this on GitHub <a href="https://github.com/szabogergely07/sportbuddy" target="_blank">>HERE<</a> </h3>
                 </div>
             </div>
           </div>
