--- a/index.html
+++ b/index.html
@@ -372,7 +372,9 @@
       <div class="container row" id="work">
          <!-- Contact Form -->
         <div class="col-xs-12" id="contact-form">
-          <form class="form-horizontal">
+          <form action="http://formspree.io/szabogergely07@gmail.com" class="form-horizontal">
+            <input type="email" name="_replyto">
+            <input type="submit" value="Send">
             <div class="form-group">
               <label class="control-label col-xs-2" for="name">Name:</label>
                 <div class="col-sm-8"><input type="text" name="name" class="form-control name-box" placeholder="Enter your name" title="George Washington"></div>
@@ -391,7 +393,7 @@
             <div class="form-group">
               <label class="control-label col-xs-2"></label>
               <div class="col-sm-8">
-                <textarea style="resize:none" cols="35" rows="5" class="form-control" placeholder="Your message here" required="required">
+                <textarea name="body" style="resize:none" cols="35" rows="5" class="form-control" placeholder="Your message here" required="required">
                 </textarea>
               </div>
             </div>
