--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
          <!-- Contact Form -->
         <div class="col-xs-12" id="contact-form">
           <form action="http://formspree.io/szabogergely07@gmail.com" class="form-horizontal">
-            
+            <input type="hidden" value="submit" name="submit">
             <div class="form-group">
               <label class="control-label col-xs-2" for="name">Name:</label>
                 <div class="col-sm-8"><input type="text" name="name" class="form-control name-box" placeholder="Enter your name" title="George Washington"></div>
@@ -386,7 +386,7 @@
             </div><!--  end form-group -->
             <div class="form-group">
               <label class="control-label col-xs-2" for="email">Email:</label>
-              <div class="col-sm-8"><input type="email" name="name" class="form-control email-box" placeholder="Your email address" required="required" title="george@washington.com"></div>
+              <div class="col-sm-8"><input type="email" name="_replyto" class="form-control email-box" placeholder="Your email address" required="required" title="george@washington.com"></div>
               <p id="visible-email"></p>
             </div>
             <div class="form-group">
