--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
       <div class="container row" id="work">
          <!-- Contact Form -->
         <div class="col-xs-12" id="contact-form">
-          <form action="http://formspree.io/szabogergely07@gmail.com" method="POST" class="form-horizontal">
+          <form action="https://formspree.io/szabogergely07@gmail.com" method="POST" class="form-horizontal">
             
             <div class="form-group">
               <label class="control-label col-xs-2" for="name">Name:</label>
@@ -381,7 +381,7 @@
             </div><!-- end form-group -->
             <div class="form-group">
               <label class="control-label col-xs-2" for="number">Phone:</label>
-              <div class="col-sm-8"><input type="number" name="phone" minlength="12" class="form-control phone-box" placeholder="Your phone number" title="00431234567890"></div>
+              <div class="col-sm-8"><input type="number" name="name" minlength="12" class="form-control phone-box" placeholder="Your phone number" title="00431234567890"></div>
               <p id="visible-phone"></p>
             </div><!--  end form-group -->
             <div class="form-group">
@@ -392,7 +392,7 @@
             <div class="form-group">
               <label class="control-label col-xs-2"></label>
               <div class="col-sm-8">
-                <textarea name="body" style="resize:none" cols="35" rows="5" class="form-control" placeholder="Your message here" required="required">
+                <textarea name="name" style="resize:none" cols="35" rows="5" class="form-control" placeholder="Your message here" required="required">
                 </textarea>
               </div>
             </div>
