--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
          <!-- Contact Form -->
         <div class="col-xs-12" id="contact-form">
           <form action="https://formspree.io/szabogergely07@gmail.com" method="POST" class="form-horizontal">
-            
+            <input type="hidden" value="submit" name="submit">
             <div class="form-group">
               <label class="control-label col-xs-2" for="name">Name:</label>
                 <div class="col-sm-8"><input type="text" name="name" class="form-control name-box" placeholder="Enter your name" title="George Washington"></div>
