--- a/index.html
+++ b/index.html
@@ -386,13 +386,13 @@
             </div><!--  end form-group -->
             <div class="form-group">
               <label class="control-label col-xs-2" for="email">Email:</label>
-              <div class="col-sm-8"><input type="email" name="_replyto" class="form-control email-box" placeholder="Your email address" required="required" title="george@washington.com"></div>
+              <div class="col-sm-8"><input type="email" name="email" class="form-control email-box" placeholder="Your email address" required="required" title="george@washington.com"></div>
               <p id="visible-email"></p>
             </div>
             <div class="form-group">
               <label class="control-label col-xs-2"></label>
               <div class="col-sm-8">
-                <textarea name="name" style="resize:none" cols="35" rows="5" class="form-control" placeholder="Your message here" required="required">
+                <textarea name="message" style="resize:none" cols="35" rows="5" class="form-control" placeholder="Your message here" required="required">
                 </textarea>
               </div>
             </div>
@@ -402,7 +402,7 @@
             <div class="form-group">
               <label class="control-label col-sm-2"></label>
               <div class="col-sm-4">
-                <input type="submit" value="Send" class="btn btn-success" id="submit-button">
+                <button type="submit" class="btn btn-success" id="submit-button">
               </div>
             </div>
           </form>
