--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             <div class="form-group">
               <label class="control-label col-sm-2"></label>
               <div class="col-sm-4">
-                <button type="submit" class="btn btn-success" id="submit-button">
+                <button type="submit" class="btn btn-success" id="">Send</button>
               </div>
             </div>
           </form>
