Sportbuddy update, confirmation email

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <hr>
                 <h4>Progress</h4>
                 <p class="modal-project">
-                  The app is working, however is being developed continuously. Right now I am adding a function to send a welcome email to user who registers.
+                  The app is working, however is being developed continuously. Right now there is a security warning by Google, because I added a function to send a welcome/confirmation email to user who registers. The email includes a link, which enables the user to login. I am using the Gmail free smtp server. I am working on the solution to remove the security warning.
                   <br>
                   You can test my app if you register: <a href="https://sportbuddies.000webhostapp.com/sportbuddy" target="_blank">HERE</a>
                   <br>
