--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
                 <hr>
                 <h4>Progress</h4>
                 <p class="modal-project">
-                  The app is working, however is being developed continuously. Right now there is a security warning by Google, because I added a function to send a welcome/confirmation email to user who registers. The email includes a link, which enables the user to login. I am using the Gmail free smtp server. I am working on the solution to remove the security warning.
+                  The app is working, if you try it and register, you will receive a confirmation email, you need to click on a link and you are free to login. This email is under construction, I need to add a possibility to unsubscribe etc...
                   <br>
-                  You can test my app if you register: <a href="https://sportbuddies.000webhostapp.com/sportbuddy" target="_blank">HERE</a>
+                  You can test my app if you register: <a href="https://gergely-szabo.000webhostapp.com/sportbuddy" target="_blank">HERE</a>
                   <br>
                   or you can find it on GitHub <a href="https://github.com/szabogergely07/sportbuddy" target="_blank">HERE</a>
                 </p>
