--- a/index.html
+++ b/index.html
@@ -269,16 +269,17 @@
                 <hr>
                 <h4>Tools and methods used</h4>
                 <p class="modal-project">
-                  Front-end: HTML&CSS, Javascript, Bootstrap
+                  Front-end: HTML&CSS, Javascript / JQuery, AJAX, Bootstrap
                   <br>
                   Back-end: PHP 7.1, MySQL, XAMPP, phpMyAdmin, MySQL Workbench
                   <br>
-                  Tools: Composer autoload, SimpleRouter (skipperbent), phpMailer, own session class, own validation class
+                  Tools: Google Maps API, Composer autoload, SimpleRouter (skipperbent), phpMailer, own session class, own validation class
                 </p>
                 <hr>
                 <h4>Progress</h4>
                 <p class="modal-project">
-                  The app is working, if you try it and register, you will receive a confirmation email, you need to click on a link and you are free to login. This email is under construction, I need to add a possibility to unsubscribe etc...
+                  The app is working, if you try it and register, you will receive a confirmation email (might be in spam folder), you need to click on a link and you are free to login. This email is under construction, I need to add a possibility to unsubscribe etc...
+                  The latest updates are some AJAX calls (checks if email address already exists) and a Google Maps API integration. If you create a new event and you start to write a location, it gives you instant address recommendations from which you have to choose. Then your event will be shown on a map. 
                   <br>
                   You can test my app if you register: <a href="https://gergely-szabo.000webhostapp.com/sportbuddy" target="_blank">HERE</a>
                   <br>
