--- a/index.html
+++ b/index.html
@@ -321,9 +321,8 @@
               </div>
               <div class="modal-body">
                 <h4>Specs and goals</h4>
-                <p class="modal-project">The idea is to create an API with full CRUD functionality. I did this through a simple todo list, you can create a todo item with title, description, category and a date. Connected with a simple HTML/JS file you can get the data and create new todo item. The API is deployed on: https://gregstodoapi.herokuapp.com/todo <br>
-                You can test it <a href="https://szabogergely07.github.io/todolistapp" target="_blank">HERE</a>, with mobile phone please use landscape view.  <br>
-                The goal is to be fully functional with authentication, which is being developed now.
+                <p class="modal-project">The idea was to create an API with full CRUD functionality. I've done this through a simple todo list, you can create a todo item with title, description, category and a date. Connected with a simple HTML/JS file you can get the data and controll the todo items. The API is deployed on: https://gregstodoapi.herokuapp.com/todo <br>
+                You can test it <a href="https://szabogergely07.github.io/todolistapp" target="_blank">HERE</a>, with mobile phone please use landscape view.
                 </p>
                 <hr>
                 <h4>Tools and methods used</h4>
