Update bookmarxmanager project

--- a/index.html
+++ b/index.html
@@ -384,11 +384,12 @@
               <div class="modal-body">
                 <h4>Specs and goals</h4>
                 <p class="modal-project">
-                  The application is under construction, it will be able to authorize a user, users can create, update, delete their bookmarks and I will use AJAX for these requests. I am planning a user registration through an oauth service, like Google.
+                  The application is up and running, it can authorize a user, users can create a new bookmark with name, description and url. The update and delete functions are running through AJAX (Axios). I am planning a user registration through an oauth service, like Google.<br>
+                  You can register and test it <a href="http://bookmarxmanager.herokuapp.com">HERE</a>
                 </p>
                 <hr>
                 <h4>Tools and methods used</h4>
-                <p class="modal-project">The application runs on Laravel 5.7, the database is PostgreSQL, the database calls are through HTTP requests, using the AJAX library Axios</p>
+                <p class="modal-project">The application runs on Laravel 5.7, the database is PostgreSQL, on frontend I use Bootstrap 4</p>
                <!--  <hr>
                 <h4>Progress</h4>
                 <p class="modal-project">
