Update bookmarxmanager project

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
               <div class="modal-body">
                 <h4>Specs and goals</h4>
                 <p class="modal-project">
-                  The application is up and running, it can authorize a user, users can create a new bookmark with name, description and url. The update and delete functions are running through AJAX (Axios). I am planning a user registration through an oauth service, like Google.<br>
+                  The application is up and running, user can sign up with normal registration or can be authenticated with Google auth service. For this I used the Laravel Socialite plugin. Users can create a new bookmark with name, description and url. The update and delete functions are running through AJAX (Axios).<br>
                   You can register and test it <a href="http://bookmarxmanager.herokuapp.com">HERE</a>
                 </p>
                 <hr>
