--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                 <h4>Specs and goals</h4>
                 <p class="modal-project">
                   The application is up and running, user can sign up with normal registration or can be authenticated with Google auth service. For this I used the Laravel Socialite plugin. Users can create a new bookmark with name, description and url. The update and delete functions are running through AJAX (Axios).<br>
-                  You can register and test it <a href="http://bookmarxmanager.herokuapp.com">HERE</a>
+                  You can register and test it <a href="http://bookmarxmanager.herokuapp.com" target="_blank">HERE</a>
                 </p>
                 <hr>
                 <h4>Tools and methods used</h4>
@@ -425,7 +425,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h2 class="modal-title" id="exampleModalLongTitle">Laravel E-Shop</h2>
+                <h2 class="modal-title" id="exampleModalLongTitle">All U Need E-Shop</h2>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
@@ -433,7 +433,8 @@
               <div class="modal-body">
                 <h4>Specs and goals</h4>
                 <p class="modal-project">
-                  This will be a Laravel E-commerce webapp with Backpack for administrators, they will be able to manage products, customers etc. I just finished the backend for the main tables (customer, product, cart, order, orderdetails). At the moment customer is able to put product in the basket and create an order. Comment, Review and Category tables and functionalities are under construction. As soon as I finished the frontend adaptation, I will deploy the app, deadline is 18.10.2018.
+                  This is a Laravel e-commerce webapp with Backpack for administrators, they are able to manage products, customers etc. I just finished the backend for the main tables (customer, product, cart, order, orderdetail). At the moment customer is able to manage the basket and create an order. Comment, Review and Category tables and functionalities are under construction.<br>
+                  You can register and try it <a href="https://alluneedshop.herokuapp.com" target="_blank">HERE</a>
                 </p>
                 <hr>
                 <h4>Tools and methods used</h4>
