--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
               <div class="modal-body">
                 <h4>Specs and goals</h4>
                 <p class="modal-project">
-                  This is a Laravel e-commerce webapp with Backpack for administrators, they are able to manage products, customers, categories. I just finished the backend for the main tables (customer, product, cart, order, orderdetail, category). At the moment customer is able to manage the basket and create an order. Pagination for the products is ready. Comment and Review tables, search options, Google auth login and other functionalities are under construction.<br>
+                  This is a Laravel e-commerce webapp with Backpack for administrators, they are able to manage products, customers, categories. At the moment customer is able to manage the basket, create an order and see the order history. Pagination for the products is ready, user can write a review and (star)rate a product, then average rating will be shown. Search options, Google authentication and other functionalities are under construction.<br>
                   You can register and try it <a href="https://alluneedshop.herokuapp.com" target="_blank">HERE</a>
                 </p>
                 <hr>
