--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
               <div class="modal-body">
                 <h4>Specs and goals</h4>
                 <p class="modal-project">
-                  This is a Laravel e-commerce webapp with Backpack for administrators, they are able to manage products, customers, categories. At the moment customer is able to manage the basket, create an order and see the order history. Pagination for the products is ready, user can write a review and (star)rate a product, then average rating will be shown. Search options, Google authentication and other functionalities are under construction.<br>
+                  This is a Laravel e-commerce webapp with Backpack for administrators, they are able to manage products, customers, categories. At the moment customer is able to manage the basket, create an order and see the order history. Pagination for the products is ready, user can write a review and (star)rate a product, then average rating will be shown. I have set up Redis for not authenticated users, they can also fill up the basket. I am on the next step, so when they login, the content of the basket will be saved for them. Search options, Google authentication and other functionalities are under construction.<br>
                   You can register and try it <a href="https://alluneedshop.herokuapp.com" target="_blank">HERE</a>
                 </p>
                 <hr>
